fixing dark mode

--- a/libraries/baseline/compiled/baseline.css
+++ b/libraries/baseline/compiled/baseline.css
@@ -1473,6 +1473,10 @@ select {
   width: 24rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .shrink {
   flex-shrink: 1;
 }
@@ -1555,6 +1559,22 @@ select {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.rounded-none {
+  border-radius: 0px;
 }
 
 .bg-amber-100 {
@@ -9237,4 +9257,37 @@ select {
 
 * {
   font-family: "SFMono-Regular", "Consolas", "Liberation Mono", "Menlo", "Courier", monospace;
+}
+
+.button {
+  &.small {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+  &.small {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  &.medium {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  &.medium {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  &.large {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+  &.large {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+  &[disabled] {
+    cursor: pointer;
+  }
+  &[disabled] {
+    opacity: 0.5;
+  }
 }
